# flynx-bot

./: README.md  __main__.py  env.example  pyproject.toml
db/migrations/: 20231206223600_init_schema_and_tables.sql
modules/: logger.py  processor.py  settings.py
